1. Метод .of [#430055]